# modular-synthesis

./: README.md  consts.py  generators.py  main.py  operators.py  print_waveform.py  pyproject.toml
sample_inputs/: universal.txt
