[tool.poetry]
name = "modular-synthesis"
version = "1.0.0"
description = "A simple program for generating and manipulating waveforms"
authors = ["Miguel Guthridge <hdsq@outlook.com.au>"]
license = "MIT"
readme = "README.md"
packages = [{include = "modular_synthesis"}]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
