[tool.poetry]
name = "modular-synthesis"
version = "1.0.1"
description = "A simple program for generating and manipulating waveforms"
authors = ["Maddy Guthridge <hello@maddyguthrudge.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "modular_synthesis"}]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
